--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@neztore/auto-config-test",
+  "name": "noblox-auto-config-test",
   "version": "1.0.0",
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
